# N4TIVE

./: .gitignore  README.md  gradle.properties  gradlew  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ctf/nativectf/: ChallengeActivity.java  MainActivity.java
app/src/main/java/com/ctf/nativectf/challenges/: Ch01.java  Ch02.java  Ch03.java  Ch04.java  Ch05.java  Ch06.java
app/src/main/jni/: CMakeLists.txt  ch01_stringmaze.c  ch02_stacksmasher.c  ch03_typeconfusion.c  ch04_gauntlet.c  ch05_heapcraft.c  ch06_vm.c  flag_core.c  flag_core.h
app/src/main/res/drawable/: bg_card.xml  ic_logo_chip.xml  ic_logo_cpu.xml
app/src/main/res/values/: strings.xml  styles.xml
scripts/: verify_flag.sh
